--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -27,13 +27,14 @@
     font-size: 20px;
     color: black; 
     font-weight:bold;
+    font-family: "Gill Sans", sans-serif;
     
 
 }
 
 .card1 p, .card2 p{
 
-   background-color: gray;
+   background-color:brown;
     
 
 }
